--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.4",
+    "@react-google-maps/api": "^2.2.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "aos": "^2.3.4",
     "material-table": "^1.69.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
